Avoid squashing images

--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -17,7 +17,7 @@
     }
 
     img {
-        width: 100%;
+        max-width: 100%;
         max-height: 25em;
         margin: 10px;
     }
